--- a/gateway-service.yml
+++ b/gateway-service.yml
@@ -4,6 +4,11 @@ server:
 spring:
   application:
     name: gateway-service
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          jwk-set-uri: http://authorization-server:9000/oauth2/jwks
   cloud:
     gateway:
       discovery:
