fix getway config

--- a/gateway-service.yml
+++ b/gateway-service.yml
@@ -5,6 +5,10 @@ spring:
   application:
     name: gateway-service
   security:
+    basic:
+      enabled: false  
+    formLogin:
+      enabled: false
     oauth2:
       resourceserver:
         jwt:
